--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
         <slf4j.version>1.7.7</slf4j.version>
+        <reactor.version>3.1.2.RELEASE</reactor.version>
     </properties>
     <repositories>
         <repository>
@@ -68,7 +69,7 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
-            <version>3.1.2.RELEASE</version>
+            <version>${reactor.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
