--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ server.tomcat.max-http-post-size=0
 server.tomcat.max-threads=10
 server.tomcat.min-spare-threads=0
 server.error.whitelabel.enabled=false
+
+server.max-http-header-size=4000
