--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ server.tomcat.max-threads=10
 server.tomcat.min-spare-threads=0
 server.error.whitelabel.enabled=false
 
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
